--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-CBM.png"> </div>
-                <div class="title"> Data and Physics Driven Learning Models for Fast MRI--Fundamentals and Methodologies from CNN, GAN to Attention and Transformers. </div>
+                <div class="title"> Data and Physics Driven Learning Models for Fast MRI-Fundamentals and Methodologies from CNN, GAN to Attention and Transformers. </div>
                 <div class="author"> Jiahao Huang, Yingying Fang, Yang Nan, Huanjun Wu, Yinzhe Wu, <div class="my_name">Zhifan Gao</div>, Yang Li, Zidong Wang, Pietro Lio, Daniel Rueckert, Yonina C. Eldar, and Guang Yang. </div>
                 <div class="source"> <div class="source_name"> arXiv </div>  </div>
                 <div class="link"> <br>[<a href="https://arxiv.org/abs/2204.01706">paper</a>] </div>
@@ -100,6 +100,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Multiple Token Rearrangement Transformer Network with Explicit Superpixel Constraint for Segmentation of Echocardiography. </div>
+                <div class="author"> Wanli Ding, Heye Zhang, Xiujian Liu, Zhenxuan Zhang, Shuxin Zhuang, <div class="my_name">Zhifan Gao</div>, Lin Xu. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103470">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Revisiting Medical Image Retrieval via Knowledge Consolidation. </div>
                 <div class="author"> Yang Nan, Huichi Zhou, Xiaodan Xing, Giorgos Papanastasiou, Lei Zhu, <div class="my_name">Zhifan Gao</div>, Alejandro F. Frangi, Guang Yang. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
@@ -127,11 +136,12 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
-                <div class="title"> Multiple Token Rearrangement Transformer Network with Explicit Superpixel Constraint for Segmentation of Echocardiography. </div>
-                <div class="author"> Wanli Ding, Heye Zhang, Xiujian Liu, Zhenxuan Zhang, Shuxin Zhuang, <div class="my_name">Zhifan Gao</div>, Lin Xu. </div>
-                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103470">paper</a>] </div>
+                <div class="title"> Advancing Congenital Heart Defects Screening from Chest X-ray with Multi-organ Feature Consistency and Fusion Learning. </div>
+                <div class="author"> Chengjin Yu, Rui Chen, Xinyi Wu, Zekun Tan, Tingyu Li, Hongyu Wu, Weidong Qiao, Xiaomei Zhong, Longwei Sun, <div class="my_name">Zhifan Gao</div>, Weiyuan Lin, Yicong Wu, Hui Liu, Huafeng Liu. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.128137">paper</a>] </div>
             </div>
+
         </div>
         <br>
 
