--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> FedMDD: Multi-Deliberation based Calibration for Federated Long-Tailed Learning. </div>
+                <div class="author"> Yiwen Wang, Jiaxin Li, Heye Zhang, Jingfeng Zhang, Feng Wan, Anqi Qiu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Knowledge-Based Systems </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.knosys.2025.113741">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Bi-variational Physics-Informed Operator Network for Fractional Flow Reserve Curve Assessment from Coronary Angiography. </div>
                 <div class="author"> Baihong Xie, Heye Zhang, Anbang Wang, Xiujian Liu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
