--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> An Orchestration Learning Framework for Ultrasound Imaging: Prompt-Guided Hyper-Perception and Attention-Matching Downstream Synchronization. </div>
+                <div class="author"> Zehui Lin, Shuo Li, Shanshan Wang, <div class="my_name">Zhifan Gao</div>, Yue Sun, Chan-Tong Lam, Xindi Hu, Xin Yang, Dong Ni, Tao Tan. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103639">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Bi-variational Physics-Informed Operator Network for Fractional Flow Reserve Curve Assessment from Coronary Angiography. </div>
                 <div class="author"> Baihong Xie, Heye Zhang, Anbang Wang, Xiujian Liu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
