--- a/publications.html
+++ b/publications.html
@@ -174,6 +174,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Energy Loss Minimization-based Side Branch Flow Model for FFR Calculation based on Intracoronary Images. </div>
+                <div class="author"> Xiangling Lai, Xiaofei Xue, <div class="my_name">Zhifan Gao</div>, Baihong Xie, Heye Zhang, Dong Yong, Haibo Jia, Xiujian Liu. </div>
+                <div class="source"> <div class="source_name"> Computer Methods and Programs in Biomedicine </div> 269:108872, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2025.102549">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Causal Recurrent Intervention for Cross-Modal Cardiac Image Segmentation. </div>
                 <div class="author"> Qixin Lin, Saidi Guo, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 123:102549, 2025 </div>
