--- a/publications.html
+++ b/publications.html
@@ -177,7 +177,7 @@
                 <div class="title"> Energy Loss Minimization-based Side Branch Flow Model for FFR Calculation based on Intracoronary Images. </div>
                 <div class="author"> Xiangling Lai, Xiaofei Xue, <div class="my_name">Zhifan Gao</div>, Baihong Xie, Heye Zhang, Dong Yong, Haibo Jia, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> Computer Methods and Programs in Biomedicine </div> 269:108872, 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2025.102549">paper</a>] </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.cmpb.2025.108872">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
