--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Artificial Intelligence–based Accurate Myocardial Infarction Mapping Using 12-Lead Electrocardiography. </div>
+                <div class="author"> Hui Wang, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Yuzhen Zhu, Shichang Lian, Kairui Bo, Shuang Li, Yifeng Gao, Baiyan Zhuang, Zhen Zhou, Xinwei Zhang, Cuiyan Wang, Koen Nieman, Lei Xu . </div>
+                <div class="source"> <div class="source_name"> European Heart Journal - Digital Health </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1093/ehjdh/ztaf077">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> FedMDD: Multi-Deliberation based Calibration for Federated Long-Tailed Learning. </div>
                 <div class="author"> Yiwen Wang, Jiaxin Li, Heye Zhang, Jingfeng Zhang, Feng Wan, Anqi Qiu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Knowledge-Based Systems </div> 2025 </div>
@@ -1114,3 +1123,4 @@
     </body>
     </html>
     
+
