--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
+                <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3599487">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> FedMDD: Multi-Deliberation based Calibration for Federated Long-Tailed Learning. </div>
                 <div class="author"> Yiwen Wang, Jiaxin Li, Heye Zhang, Jingfeng Zhang, Feng Wan, Anqi Qiu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Knowledge-Based Systems </div> 2025 </div>
@@ -1123,4 +1132,5 @@
     </body>
     </html>
     
+
 
