--- a/publications.html
+++ b/publications.html
@@ -73,19 +73,19 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
-                <div class="title"> Artificial Intelligence–based Accurate Myocardial Infarction Mapping Using 12-Lead Electrocardiography. </div>
-                <div class="author"> Hui Wang, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Yuzhen Zhu, Shichang Lian, Kairui Bo, Shuang Li, Yifeng Gao, Baiyan Zhuang, Zhen Zhou, Xinwei Zhang, Cuiyan Wang, Koen Nieman, Lei Xu . </div>
-                <div class="source"> <div class="source_name"> European Heart Journal - Digital Health </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1093/ehjdh/ztaf077">paper</a>] </div>
+                <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
+                <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3599487">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
-                <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
-                <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3599487">paper</a>] </div>
+                <div class="title"> Artificial Intelligence–based Accurate Myocardial Infarction Mapping Using 12-Lead Electrocardiography. </div>
+                <div class="author"> Hui Wang, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Yuzhen Zhu, Shichang Lian, Kairui Bo, Shuang Li, Yifeng Gao, Baiyan Zhuang, Zhen Zhou, Xinwei Zhang, Cuiyan Wang, Koen Nieman, Lei Xu . </div>
+                <div class="source"> <div class="source_name"> European Heart Journal - Digital Health </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1093/ehjdh/ztaf077">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
@@ -1132,5 +1132,6 @@
     </body>
     </html>
     
+
 
 
