--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
+                <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103773">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
                 <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 2025 </div>
@@ -1132,6 +1141,7 @@
     </body>
     </html>
     
+
 
 
 
