--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
@@ -1141,6 +1141,7 @@
     </body>
     </html>
     
+
 
 
 
