--- a/publications.html
+++ b/publications.html
@@ -99,7 +99,7 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-KBS-fedmdd.png"> </div>
                 <div class="title"> FedMDD: Multi-Deliberation based Calibration for Federated Long-Tailed Learning. </div>
                 <div class="author"> Yiwen Wang, Jiaxin Li, Heye Zhang, Jingfeng Zhang, Feng Wan, Anqi Qiu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Knowledge-Based Systems </div> 2025 </div>
@@ -1141,6 +1141,7 @@
     </body>
     </html>
     
+
 
 
 
