--- a/publications.html
+++ b/publications.html
@@ -263,7 +263,7 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TBME-main.png"> </div>
                 <div class="title">Main Coronary Flow Calculation With the Assistance of Physiological Side Branch Flow. </div>
                 <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 72(2):747-759, 2025 </div>
@@ -1141,6 +1141,7 @@
     </body>
     </html>
     
+
 
 
 
