--- a/publications.html
+++ b/publications.html
@@ -245,7 +245,7 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-RBE-data.png"> </div>
                 <div class="title">Data- and Physics-driven Deep Learning Based Reconstruction for Fast MRI: Fundamentals and Methodologies. </div>
                 <div class="author"> Jiahao Huang, Yinzhe Wu, Fanwen Wang, Yingying Fang, Yang Nan, Cagan Alkan, Daniel Abraham, Congyu Liao, Lei Xu, <div class="my_name">Zhifan Gao</div>, Weiwen Wu, Lei Zhu, Zhaolin Chen, Peter Lally, Neal Bangerter, Kawin Setsompop, Yike Guo, Daniel Rueckert, Ge Wang, Guang Yang. </div>
                 <div class="source"> <div class="source_name"> IEEE Reviews in Biomedical Engineering </div> 18:152-171, 2025. </div>
@@ -254,7 +254,7 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-CMIG-multimodal.png"> </div>
                 <div class="title">Multimodal Cross Global Learnable Attention Network for MR Images Denoising with Arbitrary Modal Missing. </div>
                 <div class="author"> Mingfu Jiang, Shuai Wang, Ka-Hou Chan, Yue Sun, Yi Xu, Zhuoneng Zhang, Qinquan Gao, <div class="my_name">Zhifan Gao</div>, Tong Tong, Hing-Chiu Chang, Tao Tan. </div>
                 <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 121:102497, 2025. </div>
@@ -1133,6 +1133,7 @@
     </body>
     </html>
     
+
 
 
 
