--- a/member.html
+++ b/member.html
@@ -24,20 +24,55 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Group</h1>
+    <h1 style="margin-top: 0em">Current Students (团队在读学生) </h1>
     <div>
-        <h2><hr><a name="profact"></a>PhD Student</h2>
+        <h2><hr><a name="profact"></a>PhD Student (博士生) </h2>
         <ul>
             <li><p> Saidi Guo (Co-superviser) </p></li>
             <li><p> Bing Zhang (Co-superviser) </p></li>
         </ul>
-        <h2><hr><a name="profact"></a>Master Student</h2>        
+        <h2><hr><a name="profact"></a>Master Student (硕士生) </h2>        
         <ul>
             <li><p> Tianyuan Feng </p></li>
             <li><p> Yihua Zhi  </p></li>
             <li><p> Hongwei Zhang </p></li>
             <li><p> Yifeng Guo </p></li>
             <li><p> Xuejiao Li (Co-superviser) </p></li>
+        </ul>
+    <div> 
+    <h1 style="margin-top: 0em">Group</h1>
+    <div>
+        <h2><hr><a name="profact"></a> Alumni (团队毕业生去向) </h2>        
+        <ul>
+            <li><p> 林玮源（2025届博士）：中山大学生物医学工程学院，博士后 </p></li>
+<li><p> 薛晓飞（2025届博士）：河北工业大学人工智能与数据科学学院，博士后 </p></li>
+<li><p> 丁万里（2025届博士）：上海联影，算法工程师 </p></li>
+<li><p> 张卫卫（2024届博士）：中山大学生物医学工程学院，博士后 </p></li>
+<li><p> 张冬（2023届博士）：安徽医科大学生物医学工程学院，副教授</p></li>
+<li><p> 郭赛迪（2023届博士）：郑州大学网络空间安全学院，副研究员 </p></li>
+<li><p> 陈军（2023届博士）：江苏大学计算机学院，讲师</p></li>
+<li><p> 余成进（2020届联合培养博士）：安徽大学大数据与统计学院，博士后 </p></li>
+
+<li><p> 王安邦（2025届硕士）：中山大学生物医学工程学院，读博 </p></li>
+<li><p> 王一雯（2025届硕士）：中山大学生物医学工程学院，读博</p></li>
+<li><p> 唐香（2025届硕士）：四川东立科技股份有限公司，工作</p></li>
+%<li><p> 李佳欣（2025届硕士）：XXXX </p></li>
+%<li><p> 赖湘玲（2025届硕士）：XXXX </p></li>
+%<li><p> 林琦炘（2025届硕士）：中山大学生物医学工程学院，博士后 </p></li>
+
+<li><p> 张振璇（2024届硕士）：英国帝国理工大学（Imperial College London），读博</p></li>
+<li><p> 连诗畅（2024届硕士）：美国罗切斯特理工学院（Rochester Institute of Technology） ，读博</p></li>
+<li><p> 吴金辉（2024届硕士）：迈瑞医疗，算法工程师 </p></li>
+<li><p> 钟文浩（2024届硕士）：普联技术有限公司（TP-LINK），算法工程师 </p></li>
+<li><p> 植艺华（2023届硕士）：深圳市科曼医疗设备有限公司，算法工程师</p></li>
+<li><p> 李雪娇（2023届硕士）：哈尔滨工业大学（深圳），读博</p></li>
+<li><p> 张宏伟（2023届硕士）：东软集团（北京）有限公司，算法工程师 </p></li>
+<li><p> 孙航（2023届硕士）：迈瑞医疗，算法工程师 </p></li>
+<li><p> 吴楚林（2022届硕士）：深圳宝安市监局工作</p></li>
+<li><p> 陈镇阳（2022届硕士）：河北省投资集团工作 </p></li>
+<li><p> 冯天元（2022届硕士）：医院信息科工作 </p></li>
+<li><p> 郝菁煜（2021届硕士）：香港科技大学，读博</p></li>
+<li><p> 李明（2021届硕士）：英国帝国理工大学（Imperial College London），读博</p></li>
         </ul>
     </div>
 </td>
