--- a/member.html
+++ b/member.html
@@ -24,14 +24,14 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Current Students (团队在读学生) </h1>
+    <h1 style="margin-top: 0em">Current Students（团队在读学生） </h1>
     <div>
-        <h2><hr><a name="profact"></a>PhD Student (博士生) </h2>
+        <h2><hr><a name="profact"></a>PhD Student（博士生） </h2>
         <ul>
             <li><p> Saidi Guo (Co-superviser) </p></li>
             <li><p> Bing Zhang (Co-superviser) </p></li>
         </ul>
-        <h2><hr><a name="profact"></a>Master Student (硕士生) </h2>        
+        <h2><hr><a name="profact"></a>Master Student（硕士生） </h2>        
         <ul>
             <li><p> Tianyuan Feng </p></li>
             <li><p> Yihua Zhi  </p></li>
@@ -40,9 +40,9 @@
             <li><p> Xuejiao Li (Co-superviser) </p></li>
         </ul>
     <div> 
-    <h1 style="margin-top: 0em">Group</h1>
+    <h1 style="margin-top: 0em">Group（团队成员）</h1>
     <div>
-        <h2><hr><a name="profact"></a> Alumni (团队毕业生去向) </h2>        
+        <h2><hr><a name="profact"></a> Alumni （团队毕业生去向） </h2>        
         <ul>
             <li><p> 林玮源（2025届博士）：中山大学生物医学工程学院，博士后 </p></li>
 <li><p> 薛晓飞（2025届博士）：河北工业大学人工智能与数据科学学院，博士后 </p></li>
@@ -56,9 +56,9 @@
 <li><p> 王安邦（2025届硕士）：中山大学生物医学工程学院，读博 </p></li>
 <li><p> 王一雯（2025届硕士）：中山大学生物医学工程学院，读博</p></li>
 <li><p> 唐香（2025届硕士）：四川东立科技股份有限公司，工作</p></li>
-%<li><p> 李佳欣（2025届硕士）：XXXX </p></li>
-%<li><p> 赖湘玲（2025届硕士）：XXXX </p></li>
-%<li><p> 林琦炘（2025届硕士）：中山大学生物医学工程学院，博士后 </p></li>
+<!--  <li><p> 李佳欣（2025届硕士）：XXXX </p></li> -->
+<!--  <li><p> 赖湘玲（2025届硕士）：XXXX </p></li> -->
+<!--  <li><p> 林琦炘（2025届硕士）：中山大学生物医学工程学院，博士后 </p></li> -->
 
 <li><p> 张振璇（2024届硕士）：英国帝国理工大学（Imperial College London），读博</p></li>
 <li><p> 连诗畅（2024届硕士）：美国罗切斯特理工学院（Rochester Institute of Technology） ，读博</p></li>
