--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1 class=name>Zhifan Gao</h1><hr>
     <td id="layout-menu">
         <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-        <div class="menu-item"><a href="research.html">Research</a></div>
-        <div class="menu-item"><a href="member.html">Member</a></div>
-        <div class="menu-item"><a href="publications.html">Publications</a></div>
-        <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-        <div class="menu-item"><a href="service.html">Service</a></div>
+        <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
+        <div class="menu-item"><a href="member-new.html">Alumni（毕业生）</a></div>
+        <div class="menu-item"><a href="publications.html">Publications（论文）</a></div>
+        <div class="menu-item"><a href="teaching.html">Teaching（教学）</a></div>
+        <div class="menu-item"><a href="service.html">Service（学术服务）</a></div>
     </td>
     <td id="layout-content">
     
