--- a/member-new.html
+++ b/member-new.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="member.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.github.io/group.html">
+    <base href="https://zhifan-gao.github.io/member-new.html">
    <!--  <base href="./group.html">  -->
 </head>
 
@@ -16,7 +16,7 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
-    <div class="menu-item"><a href="group.html" class="current">Member</a></div>
+    <div class="menu-item"><a href="member-new.html" class="current">Alumni</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
     <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html">Service</a></div>
@@ -76,4 +76,5 @@
 </tr>
 </table>
 </body>
+
 </html> 
