--- a/member-new.html
+++ b/member-new.html
@@ -15,11 +15,11 @@
 <tr valign="top">
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="research.html">Research</a></div>
-    <div class="menu-item"><a href="member-new.html" class="current">Alumni</a></div>
-    <div class="menu-item"><a href="publications.html">Publications</a></div>
-    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-    <div class="menu-item"><a href="service.html">Service</a></div>
+    <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
+    <div class="menu-item"><a href="member-new.html" class="current">Alumni（毕业生）</a></div>
+    <div class="menu-item"><a href="publications.html">Publications（论文）</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching（教学）</a></div>
+    <div class="menu-item"><a href="service.html">Service（学术服务）</a></div>
 </td>
 <td id="layout-content">
 
@@ -78,3 +78,4 @@
 </body>
 
 </html> 
+
