--- a/member-new.html
+++ b/member-new.html
@@ -34,7 +34,7 @@
             <li><p> 张冬（2023届博士）：安徽医科大学生物医学工程学院，副教授</p></li>
             <li><p> 郭赛迪（2023届博士）：郑州大学网络空间安全学院，副研究员 </p></li>
             <li><p> 陈军（2023届博士）：江苏大学计算机学院，讲师</p></li>
-            <li><p> 余成进（2020届联合培养博士）：安徽大学大数据与统计学院，博士后 </p></li>
+            <li><p> 余成进（2020届联合培养博士）：安徽大学大数据与统计学院，副教授 </p></li>
         </ul>
 
         <h2><hr><a name="profact"></a> Master（硕士毕业生） </h2>
@@ -77,5 +77,6 @@
 </body>
 
 </html> 
+
 
 
