--- a/teaching.html
+++ b/teaching.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em" class=name>Zhifan Gao</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
+<h1 class=name>Zhifan Gao</h1><hr>
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="research.html">Research</a></div>
-    <div class="menu-item"><a href="member.html">Member</a></div>
-    <div class="menu-item"><a href="publications.html">Publications</a></div>
-    <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
-    <div class="menu-item"><a href="service.html">Service</a></div>
+    <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
+    <div class="menu-item"><a href="publications.html">Publications（论文）</a></div>
+    <div class="menu-item"><a href="teaching.html" class="current">Teaching（教学）</a></div>
+    <div class="menu-item"><a href="service.html">Service（学术服务）</a></div>
+    <div class="menu-item"><a href="member-new.html">Alumni（毕业生）</a></div>
 </td>
 <td id="layout-content">
 
