--- a/publications.html
+++ b/publications.html
@@ -106,21 +106,21 @@
                 <div class="link"> <br>[<a href="https://doi.org/10.1093/ehjdh/ztaf077">paper</a>] </div>
             </div>
 
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TCVST-blenet.png"> </div>
-                <div class="title"> BLENet: a Bio-inspired Lightweight and Efficient Network for Left Ventricle Segmentation in Echocardiography. </div>
-                <div class="author"> Xintao Pang, Fengjuan Yao, Yanming Zhang, Yue Sun, Edmundo Patricio Lopes Lao, Chuan Lin, Patrick Cheong-Iao Pang, Wei Wang, Wei Li, <div class="my_name">Zhifan Gao</div>, Tao Tan. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCSVT.2025.3558496">paper</a>] </div>
-            </div>
-
         </div>
         <br>
 
 
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TCVST-blenet.png"> </div>
+                <div class="title"> BLENet: a Bio-inspired Lightweight and Efficient Network for Left Ventricle Segmentation in Echocardiography. </div>
+                <div class="author"> Xintao Pang, Fengjuan Yao, Yanming Zhang, Yue Sun, Edmundo Patricio Lopes Lao, Chuan Lin, Patrick Cheong-Iao Pang, Wei Wang, Wei Li, <div class="my_name">Zhifan Gao</div>, Tao Tan. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div> 35(9):9218-9233, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCSVT.2025.3558496">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -1138,6 +1138,7 @@
     </body>
     </html>
     
+
 
 
 
