--- a/service.html
+++ b/service.html
@@ -25,10 +25,17 @@
 
     <h1 style="margin-top: 0em">Professional Services</h1>
     <div>
+        <h2><hr><a name="profact"></a>Conference Area Chair</h2>
+        <ul>
+            <li><p> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) </p></li>
+            <li><p> ACM International Conference on Multimedia (ACMMM) </p></li>
+            <li><p> British Machine Vision Conference (BMVC) </p></li>
+        </ul> 
+        
         <h2><hr><a name="profact"></a>Conference PC Member</h2>
         <ul>
-            <li><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
             <li><p> International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
+            <li><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
         </ul>    
         <h2><hr><a name="profact"></a>Conference Reviewer</h2>
         <ul>
@@ -87,7 +94,7 @@
         </ul>
         <h2><hr><a name="profact"></a>Other</h2>        
         <ul>
-            <li><p> MICCAI Mentor, 2022 </p></li>
+            <li><p> MICCAI Mentor, 2022-2024 </p></li>
             
         </ul>
     </div>
