--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="base.css" />
-    <title>Zhifan Gao</title>
+    <title>Zhifan Gao（高智凡）</title>
     <base href="https://zhifan-gao.github.io/index.html">
 <!--     <base href="./index.html"> -->
     <meta name="google-site-verification" content="fTjUAmr1pMFrfxFIpPYoTH8iwD4DV_xyviWpOwPanxU" />
