--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="base.css" />
-    <title>Zhifan Gao（高智凡）</title>
+    <title>Zhifan Gao</title>
     <base href="https://zhifan-gao.github.io/index.html">
 <!--     <base href="./index.html"> -->
     <meta name="google-site-verification" content="fTjUAmr1pMFrfxFIpPYoTH8iwD4DV_xyviWpOwPanxU" />
@@ -13,7 +13,7 @@
 <body>
     <table summary="Table for page layout." id="tlayout">
     <tr valign="top">
-    <h1 class=name>Zhifan Gao</h1><hr>
+    <h1 class=name>Zhifan Gao（高智凡）</h1><hr>
     <td id="layout-menu">
         <div class="menu-item"><a href="index.html" class="current">Home</a></div>
         <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
