--- a/member-new.html
+++ b/member-new.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em" class=name>Zhifan Gao</h1><hr>
+<h1 style="padding-left: 0.5em" class=name>Zhifan Gao（高智凡）</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -77,6 +77,7 @@
 </body>
 
 </html> 
+
 
 
 
