--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<h1 class=name>Zhifan Gao</h1><hr>
+<h1 class=name>Zhifan Gao（高智凡）</h1><hr>
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
@@ -1138,6 +1138,7 @@
     </body>
     </html>
     
+
 
 
 
