--- a/member-new.html
+++ b/member-new.html
@@ -16,10 +16,10 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research（研究方向）</a></div>
-    <div class="menu-item"><a href="member-new.html" class="current">Alumni（毕业生）</a></div>
     <div class="menu-item"><a href="publications.html">Publications（论文）</a></div>
     <div class="menu-item"><a href="teaching.html">Teaching（教学）</a></div>
-    <div class="menu-item"><a href="service.html">Service（学术服务）</a></div>
+    <div class="menu-item"><a href="service.html" class="current">Service（学术服务）</a></div>
+    <div class="menu-item"><a href="member-new.html">Alumni（毕业生）</a></div>
 </td>
 <td id="layout-content">
 
@@ -77,6 +77,7 @@
 </body>
 
 </html> 
+
 
 
 
