--- a/publications.html
+++ b/publications.html
@@ -198,10 +198,20 @@
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-ESWA-Advancing.png"> </div>
                 <div class="title"> Advancing Congenital Heart Defects Screening from Chest X-ray with Multi-organ Feature Consistency and Fusion Learning. </div>
+                <div class="author"> Lingzhi Ye, Wentao Wang, Hang Sun, Wei Ye, Yuting Hou, Yating Zhang, Yang Zhang, Guangli Ren, <div class="my_name">Zhifan Gao</div>, Xiangmeng Qu. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 287:128137, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.128137">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-ESWA-Advancing.png"> </div>
+                <div class="title"> A Meta-Learning Approach for Multicenter and Small-Data Single-Cell Image Analysis. </div>
                 <div class="author"> Chengjin Yu, Rui Chen, Xinyi Wu, Zekun Tan, Tingyu Li, Hongyu Wu, Weidong Qiao, Xiaomei Zhong, Longwei Sun, <div class="my_name">Zhifan Gao</div>, Weiyuan Lin, Yicong Wu, Hui Liu, Huafeng Liu. </div>
                 <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 287:128137, 2025 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.128137">paper</a>] </div>
             </div>
+            
 
             <hr class="hr_style">
             <div class="paper">
@@ -1138,6 +1148,7 @@
     </body>
     </html>
     
+
 
 
 
