--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
                 <div class="title"> Embracing Knowledge Integration from the Vision-Language Model for Federated Domain Generalization on Multi-Source Fused Data. </div>
                 <div class="author"> Zhenyu Liu, Heye Zhang, Yiwen Wang, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Information Fusion </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/XXXX">paper</a>] </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.inffus.2025.103714">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
@@ -1148,6 +1148,7 @@
     </body>
     </html>
     
+
 
 
 
