--- a/publications.html
+++ b/publications.html
@@ -72,15 +72,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-IF-embracing.png"> </div>
-                <div class="title"> Embracing Knowledge Integration from the Vision-Language Model for Federated Domain Generalization on Multi-Source Fused Data. </div>
-                <div class="author"> Zhenyu Liu, Heye Zhang, Yiwen Wang, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> Information Fusion </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.inffus.2025.103714">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
@@ -112,6 +103,15 @@
 
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-IF-embracing.png"> </div>
+                <div class="title"> Embracing Knowledge Integration from the Vision-Language Model for Federated Domain Generalization on Multi-Source Fused Data. </div>
+                <div class="author"> Zhenyu Liu, Heye Zhang, Yiwen Wang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Information Fusion </div> 127:103714, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.inffus.2025.103714">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -1148,6 +1148,7 @@
     </body>
     </html>
     
+
 
 
 
