--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-physics.png"> </div>
+                <div class="title"> Physics-guided Variational Method for Fractional Flow Reserve Based on Coronary Angiography. </div>
+                <div class="author"> Qi Zhang, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Baihong Xie, Zhihui Zhang, Dan Deng, Changnong Peng, Xiaoqing Wang, Xiujian Liu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3618679">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
@@ -1148,6 +1157,7 @@
     </body>
     </html>
     
+
 
 
 
