--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
+                <div class="title"> Physics-Encoded Neural Network via Multi-Scale Tree-Structured Graph Representation for Assessing Cardiovascular Hemodynamics. </div>
+                <div class="author"> . </div>
+                <div class="source"> <div class="source_name"> Expert Systems With Applications </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/XXXX">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
@@ -1157,6 +1166,7 @@
     </body>
     </html>
     
+
 
 
 
