--- a/publications.html
+++ b/publications.html
@@ -81,9 +81,9 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-ESWA-Physics.png"> </div>
                 <div class="title"> Physics-Encoded Neural Network via Multi-Scale Tree-Structured Graph Representation for Assessing Cardiovascular Hemodynamics. </div>
-                <div class="author"> . </div>
+                <div class="author"> Anbang Wang, Xiaofei Xue, <div class="my_name">Zhifan Gao</div>, Zhihui Zhang, Dan Deng, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> Expert Systems With Applications </div> 2025 </div>
                 <div class="link"> <br>[<a href="https://doi.org/XXXX">paper</a>] </div>
             </div>
@@ -1166,6 +1166,7 @@
     </body>
     </html>
     
+
 
 
 
