--- a/publications.html
+++ b/publications.html
@@ -88,14 +88,6 @@
                 <div class="link"> <br>[<a href="https://doi.org/XXXX">paper</a>] </div>
             </div>
 
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
-                <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
-                <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
-                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103773">paper</a>] </div>
-            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -121,6 +113,15 @@
 
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
+                <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
+                <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 107:103773, 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103773">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -1166,6 +1167,7 @@
     </body>
     </html>
     
+
 
 
 
