--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
                 <div class="title"> Physics-Encoded Neural Network via Multi-Scale Tree-Structured Graph Representation for Assessing Cardiovascular Hemodynamics. </div>
                 <div class="author"> Anbang Wang, Xiaofei Xue, <div class="my_name">Zhifan Gao</div>, Zhihui Zhang, Dan Deng, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> Expert Systems With Applications </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/XXXX">paper</a>] </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.129975">paper</a>] </div>
             </div>
 
 
@@ -1167,6 +1167,7 @@
     </body>
     </html>
     
+
 
 
 
