--- a/publications.html
+++ b/publications.html
@@ -106,6 +106,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2026-MedIA-reason.png"> </div>
+                <div class="title"> Reason like A Radiologist: Chain-of-Thought and Reinforcement Learning for Verifiable Report Generation. </div>
+                <div class="author"> Peiyuan Jing, Kinhei Lee, Zhenxuan Zhang, Huichi Zhou, Zhengqing Yuan, <div class="my_name">Zhifan Gao</div>, Lei Zhu, Giorgos Papanastasiou, Yingying Fang, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 109:103910, 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103910">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
@@ -1166,6 +1175,7 @@
     </body>
     </html>
     
+
 
 
 
