--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-XXX.png"> </div>
+                <div class="title"> Non-Invasive Assessment of Microcirculatory Resistance by Coronary Computed Tomography Angiography. </div>
+                <div class="author"> Dan Deng, Ping Zhu, Xiaolong Qu, Huakang Li, Xiaofei Xue, Xiujian Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Haoran Qin, Yan Lu, Yue Feng, Min Zeng, Shuhui Chen, Xiaolong Li, Yang Zhou, Feng Liu, Hao Gao, Wanxiang Zheng, Chao Zhang, Xiang Xu, Wei Chen, Dali Yi, Giorgos Papanastasiou, William Kongto Hau, Guang Yang, Zhihui Zhang. </div>
+                <div class="source"> <div class="source_name"> EuroIntervention </div> 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.4244/eij-d-25-006719">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-physics.png"> </div>
                 <div class="title"> Physics-guided Variational Method for Fractional Flow Reserve Based on Coronary Angiography. </div>
                 <div class="author"> Qi Zhang, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Baihong Xie, Zhihui Zhang, Dan Deng, Changnong Peng, Xiaoqing Wang, Xiujian Liu. </div>
@@ -1175,6 +1184,7 @@
     </body>
     </html>
     
+
 
 
 
