--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,24 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2026-TNNLS-gradient.png"> </div>
+                <div class="title"> Gradient-refined Federated Learning on Head-Tail Imbalanced Data. </div>
+                <div class="author"> Yiwen Wang, Heye Zhang, Chenchu Xu, Lin Gu, Jingfeng Zhang, Tieyong Zeng, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div> 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2026.3653211">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2026-TAI-annealing.png"> </div>
+                <div class="title"> Annealing Genetic Slicing Adversarial Networks based feedback for Imbalanced Visual Classification. </div>
+                <div class="author"> Yongting Zhao, <div class="my_name">Zhifan Gao</div>, Jingyu Hao, Yiwen Wang, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Artificial Intelligence </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TAI.2025.3602750">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-XXX.png"> </div>
                 <div class="title"> Non-Invasive Assessment of Microcirculatory Resistance by Coronary Computed Tomography Angiography. </div>
                 <div class="author"> Dan Deng, Ping Zhu, Xiaolong Qu, Huakang Li, Xiaofei Xue, Xiujian Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Haoran Qin, Yan Lu, Yue Feng, Min Zeng, Shuhui Chen, Xiaolong Li, Yang Zhou, Feng Liu, Hao Gao, Wanxiang Zheng, Chao Zhang, Xiang Xu, Wei Chen, Dali Yi, Giorgos Papanastasiou, William Kongto Hau, Guang Yang, Zhihui Zhang. </div>
@@ -1184,6 +1202,7 @@
     </body>
     </html>
     
+
 
 
 
