--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             <h2><hr><a name="news"></a>News</h2>
             <ul>
                 <li><p> 01/2026, 恭喜王一雯同学论文被 <a target="_blank" href="https://doi.org/10.1109/TNNLS.2026.3653211">IEEE Transactions on Neural Networks and Learning Systems</a> 接收</p></li>
-                <li><p> 08/2026, 恭喜赵永婷同学论文被 <a target="_blank" href="https://doi.org/10.1109/TAI.2025.3602750">IEEE Transactions on Artificial Intelligence</a> 接收</p></li>
+                <li><p> 10/2025, 祝贺王一雯同学获得深圳鲲鹏青年创新项目 </p></li>
+                <li><p> 10/2025, 祝贺曹智翔、秦嘉谦、崔灿同学组队获得全国大学生数模比赛广东赛区本科组三等奖1项 </p></li>
+                <li><p> 10/2025, 祝贺周柯融、卢俊贤、徐浩原同学组队获得全国大学生数模比赛广东赛区本科组优胜奖1项 </p></li>
+                <li><p> 08/2025, 恭喜赵永婷同学论文被 <a target="_blank" href="https://doi.org/10.1109/TAI.2025.3602750">IEEE Transactions on Artificial Intelligence</a> 接收</p></li>
                 <li><p> 08/2025, 恭喜刘震宇同学论文被 <a target="_blank" href="https://doi.org/XXXX">Information Fusion</a> 接收</p></li>
                 <li><p> 08/2025, 恭喜庄树昕同学论文被 <a target="_blank" href="https://doi.org/10.1109/TMI.2025.3599487">IEEE Transactions on Medical Imaging</a> 接收</p></li>
                 <li><p> 07/2025, 祝贺林玮源同学博士毕业，入职中山大学 </p></li>
