--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2><hr><a name="news"></a>News</h2>
             <ul>
                 <li><p> 01/2026, 恭喜王一雯同学论文被 <a target="_blank" href="https://doi.org/10.1109/TNNLS.2026.3653211">IEEE Transactions on Neural Networks and Learning Systems</a> 接收</p></li>
-                <li><p> 12/2025, 恭喜实验室本科同学获得 <a target="_blank> “大湾区杯”粤港澳AI for Science科技竞赛 银奖3项，二等奖4项 </a> </p></li>
+                <li><p> 12/2025, 恭喜实验室本科同学获得 <a> “大湾区杯”粤港澳AI for Science科技竞赛 银奖3项，二等奖4项 </a> </p></li>
                 <li><p> 10/2025, 祝贺王一雯同学获得 <a target="_blank> 深圳鲲鹏青年创新项目</a> </p></li>
                 <li><p> 10/2025, 恭喜实验室本科同学获得 <a target="_blank> 全国大学生数模比赛广东赛区本科组 三等奖1项，优胜奖1项 </a> </p></li>
                 <li><p> 08/2025, 恭喜赵永婷同学论文被 <a target="_blank" href="https://doi.org/10.1109/TAI.2025.3602750">IEEE Transactions on Artificial Intelligence</a> 接收</p></li>
