--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <ul>
                 <li><p> 01/2026, 恭喜王一雯同学论文被 <a target="_blank" href="https://doi.org/10.1109/TNNLS.2026.3653211">IEEE Transactions on Neural Networks and Learning Systems</a> 接收</p></li>
                 <li><p> 12/2025, 恭喜实验室本科同学获得 <a> “大湾区杯”粤港澳AI for Science科技竞赛 银奖3项，二等奖4项 </a> </p></li>
-                <li><p> 10/2025, 祝贺王一雯同学获得 <a target="_blank> 深圳鲲鹏青年创新项目</a> </p></li>
-                <li><p> 10/2025, 恭喜实验室本科同学获得 <a target="_blank> 全国大学生数模比赛广东赛区本科组 三等奖1项，优胜奖1项 </a> </p></li>
+                <li><p> 10/2025, 祝贺王一雯同学获得 <a> 深圳鲲鹏青年创新项目</a> </p></li>
+                <li><p> 10/2025, 恭喜实验室本科同学获得 <a> 全国大学生数模比赛广东赛区本科组 三等奖1项，优胜奖1项 </a> </p></li>
                 <li><p> 08/2025, 恭喜赵永婷同学论文被 <a target="_blank" href="https://doi.org/10.1109/TAI.2025.3602750">IEEE Transactions on Artificial Intelligence</a> 接收</p></li>
                 <li><p> 08/2025, 恭喜刘震宇同学论文被 <a target="_blank" href="https://doi.org/10.1016/j.inffus.2025.103714">Information Fusion</a> 接收</p></li>
                 <li><p> 08/2025, 恭喜庄树昕同学论文被 <a target="_blank" href="https://doi.org/10.1109/TMI.2025.3599487">IEEE Transactions on Medical Imaging</a> 接收</p></li>
-                <li><p> 08/2025, 恭喜实验室本科同学获得 <a target="_blank> 全国大学生生物医学工程创新设计竞赛 三等奖4项 </a> </p></li>
+                <li><p> 08/2025, 恭喜实验室本科同学获得 <a> 全国大学生生物医学工程创新设计竞赛 三等奖4项 </a> </p></li>
                 <li><p> 07/2025, 祝贺林玮源同学博士毕业，入职中山大学 </p></li>
                 <li><p> 07/2025, 祝贺薛晓飞同学博士毕业，入职河北工业大学 </p></li>
                 <li><p> 07/2025, 祝贺丁万里同学博士毕业，入职联影公司 </p></li>
