--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     [Google Scholar]</a>
                     <a href="https://www.researchgate.net/profile/Zhifan_Gao2" target="_blank">[ResearchGate]</a> </span></p>
                 <p>
-                    Associate Professor in Machine Learning and AI-aided Disease Diagnosis<br>
+                    Professor in Machine Learning and AI-aided Disease Diagnosis<br>
                     School of Biomedical Engineering<br>
                     Sun Yat-sen University <br>
 
@@ -48,7 +48,7 @@
             </td>
         </table>
         <p align='justify'>
-        I am a professor at School of Biomedical Engineering, Sun Yat-sen University (SYSU). Before joining SYSU, I was a postdoc at <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+        Now I work at School of Biomedical Engineering, Sun Yat-sen University (SYSU). Before joining SYSU, I was a postdoc at <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
         Western University (UWO)</a>, Canada, working with Prof. 
         <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
         I obtained the Ph.D. in Pattern Recognition and Intelligent Systems from 
