--- a/publications.html
+++ b/publications.html
@@ -106,14 +106,7 @@
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3618679">paper</a>] </div>
             </div>
 
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-adaptive.png"> </div>
-                <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
-                <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3599487">paper</a>] </div>
-            </div>
+            
 
             <hr class="hr_style">
             <div class="paper">
@@ -130,6 +123,15 @@
 
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-TMI-adaptive.png"> </div>
+                <div class="title"> Adaptive Sequential Bayesian Iterative Learning for Myocardial Motion Estimation on Cardiac Image Sequences. </div>
+                <div class="author"> Shuxin Zhuang, Heye Zhang, Dong Liang, Hui Liu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 45(1):406-420, 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2025.3599487">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -1202,6 +1204,7 @@
     </body>
     </html>
     
+
 
 
 
